--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.5.0",
     "express-session": "^1.18.0",
     "express.js": "^1.0.0",
+    "fs": "^0.0.1-security",
     "mongo": "^0.1.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
