vercel json added new

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,19 @@
-{
+
+  {
     "version": 2,
     "builds": [
       {
-        "src": "./server.js",
+        "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "public/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
+      { "src": "/api/(.*)", "dest": "/server.js" },
+      { "src": "/(.*)", "dest": "/public/home.html" }
     ]
   }
+  
