--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nodemon server.js"
   },
   "engines": {
-    "node": ">=22.x"
+    "node": "22.x"
   },
   "author": "",
   "license": "ISC",
