local host working

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3001
-MONGO_URI=mongodb+srv://ubbagg:Garv%401902@cluster-mini-blog-platf.l5a1jp6.mongodb.net/yourDatabaseName?retryWrites=true&w=majority
+MONGO_URI=mongodb://localhost:27017/blogDB
