update for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,7 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server.js" },
-    { "src": "/user", "dest": "server.js" },
+    { "src": "/(.*)", "dest": "server.js" },
     { "src": "/(.*)", "dest": "/public/home.html" }
   ]
 }
