--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3001
-MONGO_URI=mongodb+srv://ubbagg:Garv1902@cluster-mini-blog-platf.l5a1jp6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-mini-blog-platform
+MONGODB_URI=mongodb+srv://ubbagg:Garv1902@cluster-mini-blog-platf.l5a1jp6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster-mini-blog-platform
