--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "server.js" },
+    { "src": "/(.*)", "dest": "/server.js" },
     { "src": "/(.*)", "dest": "/public/home.html" }
   ]
 }
